--- a/configs/eval/generate_samples.yaml
+++ b/configs/eval/generate_samples.yaml
@@ -1,4 +1,4 @@
-checkpoint_path: ???      # Path to the checkpoint file (.ckpt)
+checkpoint_path:  /home/patrick/UNI-D2/outputs/text8/2025.11.29/131912/dummy_checkpoints/checkpoints/last.ckpt
 samples_path: samples.pt  # Output path for generated samples (.pt)
 num_samples: 16           # Total number of samples to generate
 batch_size: 16            # Batch size for generation
