Add GStarSampler: remasker-guided token selection for sampling
Implements GStarSampler that extends StarShapeSampler to use trained
remasker predictions for guided token selection during Phase 2:

- GStarSampler overrides _get_mistake_confidences() to use remasker
  logits (softmax class 1) instead of random values
- Tokens with highest mistake confidence are preferentially remasked

StarShape enhancements:
- Added remasking_schedule parameter ('default' or 'plato')
- 'plato' mode keeps mask ratio fixed at alpha(t_on) level
- Extracted _get_mistake_confidences() method for subclass override

Files:
- src/discrete_diffusion/sampling/gstar.py (new)
- configs/sampling/gstar.yaml (new, inherits from starshape)
- tests/test_sampling/test_gstar_sampler.py (new)
- Updated starshape.py, __init__.py, configs, tests, examples

--- a/configs/sampling/starshape.yaml
+++ b/configs/sampling/starshape.yaml
@@ -6,3 +6,4 @@ steps: ${model.length}  # Use model's sequence length instead of fixed 5000
 sampler:
   _target_: discrete_diffusion.sampling.starshape.StarShapeSampler
   t_on: 0.1  # Transition point for StarShape behavior (10% of diffusion process)
+  remasker_schedule: default  # "default" follows MDLM schedule, "plato" keeps fixed mask ratio
