--- a/configs/experiment/sampling/starshape.yaml
+++ b/configs/experiment/sampling/starshape.yaml
@@ -4,7 +4,8 @@ defaults:
   - mdlm
   - override /sampling: starshape
 
-t_on: 0.1
+t_on: 0.55
+t_off: 0.05
 remasker_schedule: default
 
-samples_path: ${base_samples_path}/starshape_t_on_${t_on}_remasker_schedule_${remasker_schedule}_len_${max_length}.pt
+samples_path: ${base_samples_path}/starshape_t_on_${t_on}_t_off_${t_off}_remasker_schedule_${remasker_schedule}_len_${max_length}.pt
