--- a/configs/experiment/sampling/starshape.yaml
+++ b/configs/experiment/sampling/starshape.yaml
@@ -1,11 +1,13 @@
 # @package _global_
 
 defaults:
-  - mdlm
+  - /experiment/sampling/mdlm@_global_
   - override /sampling: starshape
 
-t_on: 0.55
-t_off: 0.05
-remasker_schedule: default
+sampling:
+  sampler:
+    t_on: 0.55
+    t_off: 0.05
+    remasker_schedule: default
 
-samples_path: ${base_samples_path}/starshape_t_on_${t_on}_t_off_${t_off}_remasker_schedule_${remasker_schedule}_len_${max_length}.pt
+samples_path: ${base_samples_path}/starshape_t_on_${sampling.sampler.t_on}_t_off_${sampling.sampler.t_off}_remasker_schedule_${sampling.sampler.remasker_schedule}_len_${max_length}.pt
