--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,9 @@ ocifs==1.3.2
 causal-conv1d==1.4.0
 mamba-ssm==1.2.0.post1
 
+# Liger Kernel (optional, for optimized cross-entropy on CUDA)
+liger-kernel>=0.4.0
+
 # Huggingface
 huggingface-hub==0.30.2
 safetensors==0.5.2
