Update README and mkdocs to include Entropy-Bounded (EB) sampler
- Added EB sampler to the sampling helpers section in README.md.
- Updated mkdocs.yml to include EB documentation in the navigation.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -95,6 +95,7 @@ nav:
           - AR: reference/sampling/ar.md
           - BD3LM: reference/sampling/bd3lm.md
           - CANDI: reference/sampling/candi.md
+          - EB: reference/sampling/eb.md
           - FlexMDM: reference/sampling/flexmdm.md
           - GIDD: reference/sampling/gidd.md
           - Partition: reference/sampling/partition.md
